ABI: Move Apple logging out of AppBundle
