# app-cross/openapi.yaml
@@ -17,16 +17,6 @@ components:
           type: object
           additionalProperties:
             type: string
-        appLogPath:
-          type: string
-        tunnelLogPath:
-          type: string
-        appLogsURL:
-          type: string
-          format: uri
-        tunnelLogsURL:
-          type: string
-          format: uri
         reviewURL:
           type:
           - string
@@ -37,11 +27,6 @@ components:
       - displayName
       - versionNumber
       - buildNumber
-      - bundleStrings
-      - appLogPath
-      - tunnelLogPath
-      - appLogsURL
-      - tunnelLogsURL
     AppConfiguration:
       type: object
       properties:
